# MathLib

./: CMakeLists.txt  README.me
include/: Matrix.h  Vector.h
src/: MathUtils.cpp
